<resources>
    <string name="app_name">WealthWave</string>
    <string name="hello_welcome">Hello, Welcome</string>
    <string name="title_activity_bottom_nav">Bottom_nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account? Sign Up</string>
    <string name="register_to_explore">Register to explore</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="income_text">Income KES 200000.00</string>
    <string name="profile_image">Profile image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_goal_fragment">Hello goals fragment</string>
    <string name="budget">BUDGET</string>
    <string name="planned_expenses">Planned Expenses</string>
    <string name="budget_camel_case">Budget</string>
    <string name="create_a_budget">Create a budget</string>
    <string name="create_budget">Create Budget</string>
    <string name="add_a_transaction">Add a transaction</string>
    <string name="add_transaction">Add transaction</string>
    <string name="initialize">Initialize</string>
    <string name="zero_amt">KES 0.00</string>
    <string name="budgets">Budgets</string>
    <string name="goals">Goals</string>
    <string name="balance">Balance</string>
    <string name="transactions">TRANSACTIONS</string>
    <string name="logo">Logo</string>
</resources>