<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/md_theme_light_background"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/welcome_back"
        android:textColor="@color/md_theme_light_onBackground"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login_to_continue"
        android:textColor="@color/md_theme_light_onBackground"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_address"
            style="@style/LoginTextInputLayoutStyleLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/md_theme_light_onBackground"
            app:boxStrokeColor="@color/md_theme_light_onBackground"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_light_onBackground"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/LoginTextInputLayoutStyleLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/md_theme_light_onBackground"
            app:boxStrokeColor="@color/md_theme_light_onBackground"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/md_theme_light_onBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:textColor="@color/md_theme_light_onBackground"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:elevation="0dp"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textColor="@color/md_theme_light_onBackground" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button"
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:backgroundTint="@color/md_theme_light_onSurface"
            android:textColor="@color/md_theme_light_onPrimary" />

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/md_theme_light_onBackground" />
    </LinearLayout>

</LinearLayout>