<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/md_theme_light_background"
    tools:context=".RegisterActivity"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/hello_welcome"
        android:textColor="@color/md_theme_light_onBackground"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/register_to_explore"
        android:textColor="@color/md_theme_light_onBackground"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name"
            style="@style/LoginTextInputLayoutStyleLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/md_theme_light_onBackground"
            app:boxStrokeColor="@color/md_theme_light_onBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_light_onBackground"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_email_address"
            style="@style/LoginTextInputLayoutStyleLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/md_theme_light_onBackground"
            app:boxStrokeColor="@color/md_theme_light_onBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_light_onBackground"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_password"
            style="@style/LoginTextInputLayoutStyleLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/md_theme_light_onBackground"
            app:boxStrokeColor="@color/md_theme_light_onBackground"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/md_theme_light_onBackground">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_light_onBackground"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password"
            style="@style/LoginTextInputLayoutStyleLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/md_theme_light_onBackground"
            app:boxStrokeColor="@color/md_theme_light_onBackground"
            app:passwordToggleEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_theme_light_onBackground"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            style="@style/Widget.Material3.Button"
            android:id="@+id/register"
            android:paddingVertical="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/register"
            android:backgroundTint="@color/md_theme_light_onSurface"
            android:textColor="@color/md_theme_light_onPrimary" />

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/login_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:text="@string/already_have_an_account_login"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/md_theme_light_onBackground" />
    </LinearLayout>

</LinearLayout>