<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/md_theme_light_background"
    tools:context=".user.transactions.TransactionActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transactions"
        android:paddingVertical="10dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/md_theme_light_primary"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/transaction_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        app:singleSelection="true">
        <com.google.android.material.chip.Chip
            android:id="@+id/expense_filter"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Expense"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/income_filter"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Income"/>
    </com.google.android.material.chip.ChipGroup>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:isScrollContainer="true"
            android:scrollbars="vertical"
            android:id="@+id/transactions_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            >
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:fabSize="normal"
                android:layout_margin="15dp"
                android:contentDescription="@string/initialize"
                />
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fab_transaction_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/transaction"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/fab_btn"
                app:layout_constraintBottom_toTopOf="@+id/fab_btn"
                app:fabSize="normal"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/add_a_transaction"
                android:text="@string/add_transaction"
                />
            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fab_budget_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:icon="@drawable/baseline_account_balance_wallet_24"
                app:layout_constraintEnd_toEndOf="@+id/fab_transaction_btn"
                app:layout_constraintBottom_toTopOf="@+id/fab_transaction_btn"
                app:fabSize="normal"
                android:text="@string/create_budget"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/create_a_budget"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/md_theme_light_secondaryContainer"
        android:elevation="0dp"
        app:itemIconTint="@color/md_theme_light_onPrimaryContainer"
        app:itemTextColor="@color/md_theme_light_onPrimaryContainer"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_nav_menu"/>
</LinearLayout>