<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/md_theme_light_background"
    tools:context=".user.budget.BudgetActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/budget"
        android:paddingVertical="10dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/md_theme_light_primary"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">
        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/md_theme_light_secondaryContainer">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                >
                <TextView
                    android:id="@+id/amount_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:paddingVertical="5dp"
                    android:text="@string/balance"
                    android:textAllCaps="true"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textColor="@color/md_theme_light_primary"/>
                <TextView
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/amount_text"
                    android:paddingVertical="5dp"
                    android:text="@string/zero_amt"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/md_theme_light_primary"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budgets"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goals"/>
        </com.google.android.material.tabs.TabLayout>
    </LinearLayout>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:isScrollContainer="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp">

    </androidx.viewpager2.widget.ViewPager2>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/md_theme_light_secondaryContainer"
        android:elevation="0dp"
        app:itemIconTint="@color/md_theme_light_onPrimaryContainer"
        app:itemTextColor="@color/md_theme_light_onPrimaryContainer"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_nav_menu"/>
</LinearLayout>